--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,4 +1,3 @@
-/* Reset styles */
 h1,
 h2,
 h3,
@@ -6,17 +5,15 @@ h4,
 h5,
 h6,
 p {
-  margin: 0;
-}
-
-p:last-child {
+  margin-top: 0;
   margin-bottom: 0;
 }
 
 ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+  list-style-type: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
 }
 
 a {
